--- a/src/game.html
+++ b/src/game.html
@@ -51,7 +51,7 @@
         </div>
     </div>
 
-    <script src="game.mjs"></script>
+    <script type="module" src="game.mjs"></script>
 </body>
 
 </html>
