--- a/src/game.html
+++ b/src/game.html
@@ -34,6 +34,7 @@
             <li><a href="aichat.html">AI CHAT</a></li>
             <li><a href="aipic.html">AI PIC</a></li>
             <li><a href="game.html">AI GAME</a></li>
+            <li><a href="aiform.html">AI FORM</a></li>
         </ul>
     </nav>
     
