fixed bugs in aiform.mjs

--- a/src/aiform.html
+++ b/src/aiform.html
@@ -74,7 +74,7 @@
                                 <label for="translate">Translate</label>
                             </td>
                             <td>
-                                <input type="checkbox" id="translate" name="translate" onchange="showDropdown()"
+                                <input type="radio" id="translate" name="checkbox" onchange="showDropdown()"
                                     value="value1">
                             </td>
                         </tr>
