--- a/src/aiform.html
+++ b/src/aiform.html
@@ -182,7 +182,7 @@
                     <!-- Flavor Slider -->
 
                     <div id="slider-container">
-                        <label for="slider" id="slider-value">Falvour:<span id="slider-output">0.5</span></label>
+                        <label for="slider" id="slider-value">Flavour:<span id="slider-output">0.5</span></label>
                         <input type="range" min="0" max="1" step="0.01" value="" id="slider">
 
                         <script>
